--- a/index.html
+++ b/index.html
@@ -13,19 +13,12 @@
     <div class="sidebar">
       <h3>Menu</h3>
       <ul>
-        <li><a href="#">Home</a></li>
         <li class="active"><a href="#">Dashboard</a></li>
-        <li><a href="#">Utilidades</a></li>
-        <li><a href="#">Tipografia</a></li>
-        <li><a href="#">Tabela</a></li>
-        <li><a href="#">Form</a></li>
-        <li><a href="#">Shadow</a></li>
-        <li><a href="#">Auth</a></li>
-        <li><a href="#">Login</a></li>
-        <li><a href="#">Register</a></li>
-        <li><a href="#">Extra</a></li>
-        <li><a href="#">Icons</a></li>
-        <li><a href="#">Sample Page</a></li>
+        <li><a href="#">Teste</a></li>
+        <li><a href="#">Teste</a></li>
+        <li><a href="#">Teste</a></li>
+        <li><a href="#">Teste</a></li>
+
       </ul>
     </div>
     <div class="content">
@@ -36,10 +29,10 @@
         <div class="widget calendario">
           <h2>Calendário</h2>
           <div class="calendario-placeholder">
-            <img src="calendario_janeiro_2025.png" alt="Calendário Janeiro 2025" style="max-width: 100%;">
+            <iframe src=https://calendar.google.com/calendar/embed?src=postosim8%40gmail.com&ctz=America%2FSao_Paulo
+              style="border:solid 1px #777" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
           </div>
         </div>
-
         <div class="widget tabela-mes">
           <h2>Turnos - Maio 2025</h2>
           <table id="tabela-maio">
