--- a/index.html
+++ b/index.html
@@ -1,96 +1,57 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
+  <title>Login</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tabela de Turnos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="dashboard-container">
-    <div class="sidebar">
-      <h3>Menu</h3>
-      <ul>
-        <li class="active"><a href="#">Dashboard</a></li>
-        <li><a href="#">Teste</a></li>
-        <li><a href="#">Teste</a></li>
-        <li><a href="#">Teste</a></li>
-        <li><a href="#">Teste</a></li>
+  <div class="container">
+    <div class="container-login">
+      <div class="wrap-login">
+        <form class="login-form">
+          <span class="login-form-title">Faça o login</span>
 
-      </ul>
-    </div>
-    <div class="content">
-      <header>
-        <h1>Painel de Controle</h1>
-      </header>
-      <main>
-        <div class="widget calendario">
-          <h2>Calendário</h2>
-          <div class="calendario-placeholder">
-            <iframe src=https://calendar.google.com/calendar/embed?src=postosim8%40gmail.com&ctz=America%2FSao_Paulo
-              style="border:solid 1px #777" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+          <div class="wrap-input margin-top-35 margin-bottom-35">
+            <input class="input-form" type="text" name="usuario" autocomplete="off">
+            <span class="focus-input-form" data-placeholder="Usuário"></span>
           </div>
-        </div>
-        <div class="widget tabela-mes">
-          <h2>Turnos - Maio 2025</h2>
-          <table id="tabela-maio">
-            <thead>
-              <tr>
-                <th>Dia</th>
-                <th>Hora</th>
-                <th>Colaborador</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td><input value="03/mai"></td>
-                <td><input class="hora" value="04:00:00"></td>
-                <td><input class="colaborador" value="Roger"></td>
-              </tr>
-              <tr>
-                <td><input value="10/mai"></td>
-                <td><input class="hora" value="04:00:00"></td>
-                <td><input class="colaborador" value="Vinicius"></td>
-              </tr>
-              <tr>
-                <td><input value="17/mai"></td>
-                <td><input class="hora" value="04:00:00"></td>
-                <td><input class="colaborador" value="Luis Henrique"></td>
-              </tr>
-              <tr>
-                <td><input value="24/mai"></td>
-                <td><input class="hora" value="04:00:00"></td>
-                <td><input class="colaborador" value="Roger"></td>
-              </tr>
-              <tr>
-                <td><input value="31/mai"></td>
-                <td><input class="hora" value="04:00:00"></td>
-                <td><input class="colaborador" value="Vinicius"></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
 
-        <div class="widget resumo-colaborador">
-          <h2>Resumo por Colaborador</h2>
-          <table id="resumo-tabela">
-            <thead>
-              <tr>
-                <th>Colaborador</th>
-                <th>Total Horas</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
-        </div>
-      </main>
+          <div class="wrap-input margin-bottom-35">
+            <input class="input-form" type="password" name="password">
+            <span class="focus-input-form" data-placeholder="Senha"></span>
+          </div>
+
+          <div class="container-login-form-btn">
+            <a class="login-form-btn" href="home.html">Login</a>
+          </div>
+
+          <ul class="login-utils">
+            <li class="margin-bottom-8 margin-top-8">
+              <span class="text1">Esqueceu sua</span>
+              <a href="#" class="text2">senha?</a>
+            </li>
+            <li>
+              <span class="text1">Não tem conta?</span>
+              <a href="#" class="text2">Criar</a>
+            </li>
+          </ul>
+        </form>
+      </div>
+      <img src="images/login.png" width="800" height="340" class="margin-left-50" alt="Login imagem" />
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    document.querySelectorAll('.input-form').forEach(input => {
+      input.addEventListener("blur", () => {
+        input.classList.toggle("has-val", input.value.trim() !== "");
+      });
+    });
+  </script>
 </body>
 
 </html>
