--- a/index.html
+++ b/index.html
@@ -2,54 +2,61 @@
 <html lang="pt-br">
 
 <head>
-  <title>Login</title>
+  <title>Login - Sistema de Turnos</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="container">
-    <div class="container-login">
-      <div class="wrap-login">
+  <div class="login-page-container">
+    <div class="login-content-wrapper">
+      <div class="login-form-wrapper">
         <form class="login-form" method="POST" action="login.php">
           <span class="login-form-title">Faça o login</span>
 
-          <div class="wrap-input margin-top-35 margin-bottom-35">
-            <input class="input-form" type="text" name="usuario" required autocomplete="off">
-            <span class="focus-input-form" data-placeholder="Usuário"></span>
-          </div>>
-
-          <div class="wrap-input margin-bottom-35">
-            <input class="input-form" type="password" name="password" required>
-            <span class="focus-input-form" data-placeholder="Senha"></span>
+          <div class="input-group margin-top-35 margin-bottom-35">
+            <input class="input-field" type="text" name="usuario" required autocomplete="off">
+            <span class="input-focus-effect" data-placeholder="Usuário"></span>
           </div>
 
-          <div class="container-login-form-btn">
-            <button class="login-form-btn" type="submit">Login</button>
+          <div class="input-group margin-bottom-35">
+            <input class="input-field" type="password" name="senha" required> <span class="input-focus-effect"
+              data-placeholder="Senha"></span>
           </div>
 
-          <ul class="login-utils">
+          <div class="login-form-button-container">
+            <button class="login-form-button" type="submit">Login</button>
+          </div>
+
+          <ul class="login-utility-links">
             <li class="margin-bottom-8 margin-top-8">
-              <span class="text1">Esqueceu sua</span>
-              <a href="#" class="text2">senha?</a>
+              <span class="utility-text-primary">Esqueceu sua</span>
+              <a href="#" class="utility-text-secondary">senha?</a>
             </li>
             <li>
-              <span class="text1">Não tem conta?</span>
-              <a href="#" class="text2">Criar</a>
+              <span class="utility-text-primary">Não tem conta?</span>
+              <a href="conta.html" class="utility-text-secondary">Criar</a>
             </li>
           </ul>
         </form>
       </div>
-      <img src="images/login.png" width="800" height="340" class="margin-left-50" alt="Login imagem" />
+      <img src="images/login.png" width="800" height="340" class="login-image" alt="Ilustração da tela de Login" />
     </div>
   </div>
 
   <script>
-    document.querySelectorAll('.input-form').forEach(input => {
+    // Script para adicionar/remover classe 'has-val' quando o campo tem valor
+    // Isso é usado para o efeito de placeholder flutuante no CSS
+    document.querySelectorAll('.input-field').forEach(input => {
       input.addEventListener("blur", () => {
+        // Adiciona a classe 'has-val' se o input não estiver vazio
         input.classList.toggle("has-val", input.value.trim() !== "");
       });
+      // Verifica no carregamento da página se os campos já têm valor (ex: preenchimento automático)
+      if (input.value.trim() !== "") {
+        input.classList.add("has-val");
+      }
     });
   </script>
 </body>
