--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
           <li class="sidebar-nav-item active"><a href="#">Dashboard</a></li>
           <li class="sidebar-nav-item"><a href="#">Gerenciar Turnos</a></li>
           <li class="sidebar-nav-item"><a href="#">Colaboradores</a></li>
-          <li class="sidebar-nav-item"><a href="#reports-section">Relatórios</a></li>
+          <li class="sidebar-nav-item"><a href="cadastrar_colaborador.html">Cadastrar Colaborador</a></li>
           <li class="sidebar-nav-item"><a href="#google-calendar-section">Google Calendar</a></li>
           <li class="sidebar-nav-item"><a href="index.html" id="logout-link">Sair</a></li>
         </ul>
@@ -27,8 +27,7 @@
     <div class="dashboard-main-content">
       <header class="dashboard-header">
         <h1>Sim Posto - Gestão de Turnos</h1>
-        <div id="user-info" style="float: right; padding-top: 10px;">
-        </div>
+        <div id="user-info" style="float: right; padding-top: 10px;"></div>
       </header>
 
       <main class="dashboard-grid">
@@ -38,13 +37,30 @@
             <iframe src="https://calendar.google.com/calendar/embed?src=postosim8%40gmail.com&ctz=America%2FSao_Paulo"
               style="border:solid 1px #777" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
           </div>
+          <section id="google-calendar-section" class="dashboard-widget widget-google-calendar-integration">
+            <h2>Integração com Google Calendar</h2>
+            <p id="gcal-status-message"></p>
+            <a href="google_auth_redirect.php" class="action-button" id="connect-gcal-btn">Conectar com Google
+              Calendar</a>
+            <button id="disconnect-gcal-btn" class="action-button red" style="display: none;">Desconectar Google
+              Calendar</button>
+            <p><small>Permitir que o Sim Posto adicione seus turnos à sua agenda Google.</small></p>
+          </section>
         </section>
 
         <section class="dashboard-widget widget-shifts-table">
-          <h2>Turnos Programados - Maio 2025 <span id="current-month-year">(Exemplo: Maio 2025)</span></h2>
+          <h2>Turnos Programados - <span id="current-month-year">Maio 2025</span> <small>(Exemplo)</small></h2>
+
+          <!-- Botões reorganizados -->
+          <div class="button-group">
+            <button id="add-shift-row-button" class="action-button green">Adicionar Novo Turno</button>
+            <button id="delete-selected-shifts-button" class="action-button red">Excluir Selecionados</button>
+          </div>
+
           <table id="shifts-table-may">
             <thead>
               <tr>
+                <th><input type="checkbox" id="select-all-shifts" title="Selecionar Todos"></th>
                 <th>Dia</th>
                 <th>Turno (Início)</th>
                 <th>Colaborador</th>
@@ -52,14 +68,10 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td><input type="text" class="shift-date" value="03/mai"></td>
-                <td><input type="time" class="shift-time" value="04:00:00"></td>
-                <td><input type="text" class="shift-employee" value="Roger"></td>
-                <td class="shift-google-event-id"></td>
-              </tr>
+              <!-- Linhas serão populadas dinamicamente -->
             </tbody>
           </table>
+
           <button id="save-shifts-button" class="action-button">Salvar Alterações nos Turnos</button>
         </section>
 
@@ -73,103 +85,14 @@
               </tr>
             </thead>
             <tbody>
+              <!-- Linhas serão populadas dinamicamente -->
             </tbody>
           </table>
         </section>
-
-        <section id="google-calendar-section" class="dashboard-widget">
-          <h2>Integração com Google Calendar</h2>
-          <p id="gcal-status-message"></p>
-          <a href="google_auth_redirect.php" class="action-button" id="connect-gcal-btn">Conectar com Google
-            Calendar</a>
-          <button id="disconnect-gcal-btn" class="action-button"
-            style="background-color: #d9534f; display: none;">Desconectar Google Calendar</button>
-          <p><small>Permitir que o Sim Posto adicione seus turnos à sua agenda Google.</small></p>
-        </section>
-
-        <section id="reports-section" class="dashboard-widget">
-          <h2>Relatórios e Exportação</h2>
-          <p>Funcionalidades de relatórios avançados e exportação de dados podem ser adicionadas aqui.</p>
-        </section>
-
       </main>
     </div>
   </div>
 
-  <script>
-    // Adicionar script para lidar com mensagens de status do Google Calendar e mostrar/ocultar botões
-    document.addEventListener('DOMContentLoaded', function () {
-      const urlParams = new URLSearchParams(window.location.search);
-      const gcalStatus = urlParams.get('gcal_status');
-      const gcalMsg = urlParams.get('gcal_msg');
-      const statusMessageEl = document.getElementById('gcal-status-message');
-      const connectBtn = document.getElementById('connect-gcal-btn');
-      const disconnectBtn = document.getElementById('disconnect-gcal-btn');
-
-      // Função para verificar o status da conexão com o Google (poderia ser um fetch para o backend)
-      // Por agora, vamos assumir que se não houver erro, e se existir um token (hipotético), está conectado.
-      // Esta lógica precisaria ser mais robusta, verificando no backend se existe um token válido.
-      function checkGCalConnectionStatus() {
-        // Simulação: em um app real, você faria uma chamada AJAX para o backend
-        // para verificar se existe um token válido para o usuário.
-        // fetch('/api/check_gcal_token.php').then(res => res.json()).then(data => {
-        //    if (data.connected) {
-        //        connectBtn.style.display = 'none';
-        //        disconnectBtn.style.display = 'inline-block';
-        //        statusMessageEl.textContent = 'Conectado ao Google Calendar.';
-        //        statusMessageEl.style.color = 'green';
-        //    } else {
-        //        connectBtn.style.display = 'inline-block';
-        //        disconnectBtn.style.display = 'none';
-        //    }
-        // });
-        // Como não temos essa API, vamos apenas mostrar o botão de conectar por padrão
-        // e reagir aos parâmetros da URL.
-        if (gcalStatus === 'success') {
-          statusMessageEl.textContent = 'Google Calendar conectado com sucesso!';
-          statusMessageEl.style.color = 'green';
-          connectBtn.style.display = 'none'; // Esconde o botão de conectar
-          disconnectBtn.style.display = 'inline-block'; // Mostra o de desconectar
-        } else if (gcalStatus === 'error') {
-          statusMessageEl.textContent = 'Falha na conexão com Google Calendar: ' + (gcalMsg || 'Tente novamente.');
-          statusMessageEl.style.color = 'red';
-          disconnectBtn.style.display = 'none'; // Esconde o botão de desconectar
-        }
-      }
-      checkGCalConnectionStatus(); // Chamar na carga da página
-
-      if (disconnectBtn) {
-        disconnectBtn.addEventListener('click', function () {
-          if (confirm('Tem certeza que deseja desconectar sua conta do Google Calendar? Isso removerá a permissão do sistema de acessar sua agenda.')) {
-            // Redirecionar para um script PHP que revoga o token
-            window.location.href = 'google_revoke_token.php'; // Você precisará criar este script
-          }
-        });
-      }
-
-      // Logout (exemplo básico)
-      const logoutLink = document.getElementById('logout-link');
-      if (logoutLink) {
-        logoutLink.addEventListener('click', function (e) {
-          e.preventDefault();
-          // Idealmente, chamar um script PHP para destruir a sessão no servidor
-          // fetch('logout.php').then(() => window.location.href = 'index.html');
-          alert('Sessão encerrada (simulação). Em um app real, isso chamaria logout.php.');
-          window.location.href = 'index.html'; // Redireciona após simulação
-        });
-      }
-
-      // Exibir informações do usuário (se disponíveis na sessão e passadas para o JS)
-      // Ex: <?php echo json_encode(['nome' => $_SESSION['usuario_nome_completo']]); ?> em algum lugar
-      // E o JS leria isso.
-      const userInfoDiv = document.getElementById('user-info');
-      if (userInfoDiv && typeof simpostoUserInfo !== 'undefined') { // simpostoUserInfo seria uma var JS global
-        userInfoDiv.textContent = 'Bem-vindo(a), ' + simpostoUserInfo.nome;
-      }
-
-
-    });
-  </script>
   <script src="script.js"></script>
 </body>
 
