--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Login - Sistema de Turnos</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,17 +19,19 @@
           <span class="login-form-title">Faça o login</span>
 
           <div class="input-group margin-top-35 margin-bottom-35">
-            <input class="input-field" type="text" name="usuario" required autocomplete="off">
+            <input class="input-field" type="text" name="usuario" required autocomplete="off" aria-label="Usuário">
             <span class="input-focus-effect" data-placeholder="Usuário"></span>
           </div>
 
           <div class="input-group margin-bottom-35">
-            <input class="input-field" type="password" name="senha" required> <span class="input-focus-effect"
-              data-placeholder="Senha"></span>
+            <input class="input-field" type="password" name="senha" required aria-label="Senha">
+            <span class="input-focus-effect" data-placeholder="Senha"></span>
           </div>
 
           <div class="login-form-button-container">
-            <button class="login-form-button" type="submit">Login</button>
+            <button class="login-form-button" type="submit">
+              <i class="fas fa-sign-in-alt"></i> Login
+            </button>
           </div>
 
           <ul class="login-utility-links">
@@ -46,14 +51,11 @@
   </div>
 
   <script>
-    // Script para adicionar/remover classe 'has-val' quando o campo tem valor
-    // Isso é usado para o efeito de placeholder flutuante no CSS
+    // Script para efeito flutuante
     document.querySelectorAll('.input-field').forEach(input => {
       input.addEventListener("blur", () => {
-        // Adiciona a classe 'has-val' se o input não estiver vazio
         input.classList.toggle("has-val", input.value.trim() !== "");
       });
-      // Verifica no carregamento da página se os campos já têm valor (ex: preenchimento automático)
       if (input.value.trim() !== "") {
         input.classList.add("has-val");
       }
