--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </ul>
         </form>
       </div>
-      <img src="images/login.png" width="800" height="340" class="login-image" alt="Ilustração da tela de Login" />
+      <img src="./images/index.png" class="login-image" alt="Ilustração para tela de Login" />
     </div>
   </div>
 
