--- a/conta.html
+++ b/conta.html
@@ -50,7 +50,7 @@
       </ul>
     </div>
 
-    <img src="images/login.png" alt="Imagem ilustrativa" class="login-image" />
+    <img src="images/login.jpg" alt="Imagem ilustrativa para cadastro" class="login-image" />
   </div>
 </body>
 
