--- a/home.html
+++ b/home.html
@@ -4,116 +4,92 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard - Gestão de Turnos</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <title>Dashboard - Escala de Trabalho</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
-<body class="dashboard-body-background">
+<body>
   <div class="dashboard-layout-container">
     <aside class="dashboard-sidebar">
-      <div class="sidebar-header">
-        <h3><i class="fas fa-bars"></i> Menu Principal</h3>
-      </div>
+      <h3>Menu Principal</h3>
       <nav>
         <ul>
-          <li class="sidebar-nav-item active"><a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-          <li class="sidebar-nav-item"><a href="#"><i class="fas fa-calendar-alt"></i> Gerenciar Turnos</a></li>
-          <li class="sidebar-nav-item"><a href="#"><i class="fas fa-users"></i> Colaboradores</a></li>
-          <li class="sidebar-nav-item"><a href="cadastrar_colaborador.html"><i class="fas fa-user-plus"></i> Cadastrar
-              Colaborador</a></li>
-          <li class="sidebar-nav-item"><a href="#google-calendar-section"><i class="fab fa-google"></i> Google
-              Calendar</a></li>
+          <li class="sidebar-nav-item active"><a href="#">Dashboard</a></li>
+          <li class="sidebar-nav-item"><a href="#">Gerenciar Turnos</a></li>
+          <li class="sidebar-nav-item"><a href="#">Colaboradores</a></li>
+          <li class="sidebar-nav-item"><a href="#">Relatórios</a></li>
+          <li class="sidebar-nav-item"><a href="index.html">Sair</a></li>
         </ul>
       </nav>
-      <div class="sidebar-footer">
-        <a href="index.html" id="logout-link" class="sidebar-nav-item"><i class="fas fa-sign-out-alt"></i> Sair</a>
-      </div>
     </aside>
 
     <div class="dashboard-main-content">
       <header class="dashboard-header">
-        <div class="header-title-container">
-          <h1><i class="fas fa-gas-pump"></i> Sim Posto - Gestão de Turnos</h1>
-        </div>
-        <div id="user-info" class="user-profile-area">
-          <i class="fas fa-user-circle"></i> Admin
-        </div>
+        <h1>Sim Posto - Gestão de Turnos</h1>
       </header>
 
       <main class="dashboard-grid">
         <section class="dashboard-widget widget-calendar">
-          <h2><i class="fas fa-calendar-check"></i> Calendário de Eventos (Google)</h2>
+          <h2>Calendário de Eventos</h2>
           <div class="calendar-integration-placeholder">
             <iframe src="https://calendar.google.com/calendar/embed?src=postosim8%40gmail.com&ctz=America%2FSao_Paulo"
-              style="border:solid 1px #777" width="100%" height="350" frameborder="0" scrolling="no"></iframe>
+              style="border:solid 1px #777" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
           </div>
-          <section id="google-calendar-section" class="widget-google-calendar-integration">
-            <h3><i class="fab fa-google"></i> Integração com Google Calendar</h3>
-            <p id="gcal-status-message"></p>
-            <div class="gcal-buttons">
-              <a href="google_auth_redirect.php" class="action-button gcal-button" id="connect-gcal-btn">
-                <i class="fab fa-google"></i> Conectar
-              </a>
-              <button id="disconnect-gcal-btn" class="action-button red gcal-button" style="display: none;">
-                <i class="fas fa-unlink"></i> Desconectar
-              </button>
-            </div>
-            <p><small>Permitir que o Sim Posto adicione seus turnos à sua agenda Google.</small></p>
-          </section>
         </section>
 
         <section class="dashboard-widget widget-shifts-table">
-          <h2><i class="fas fa-tasks"></i> Turnos Programados - <span id="current-month-year">Maio 2025</span></h2>
-
-          <div class="button-group">
-            <button id="add-shift-row-button" class="action-button green"><i class="fas fa-plus-circle"></i> Adicionar
-              Turno</button>
-            <button id="delete-selected-shifts-button" class="action-button red"><i class="fas fa-trash-alt"></i>
-              Excluir Selecionados</button>
-            <button id="save-shifts-button" class="action-button primary"><i class="fas fa-save"></i> Salvar
-              Alterações</button>
-          </div>
-
-          <div class="table-responsive">
-            <table id="shifts-table-may">
-              <thead>
-                <tr>
-                  <th><input type="checkbox" id="select-all-shifts" title="Selecionar Todos"></th>
-                  <th>Dia</th>
-                  <th>Turno (Início)</th>
-                  <th>Colaborador</th>
-                  <th>Ações</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </div>
+          <h2>Turnos Programados - Maio 2025</h2>
+          <table id="shifts-table-may">
+            <thead>
+              <tr>
+                <th>Dia</th>
+                <th>Turno</th>
+                <th>Colaborador</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><input type="text" class="shift-date" value="03/mai"></td>
+                <td><input type="time" class="shift-time" value="04:00:00"></td>
+                <td><input type="text" class="shift-employee" value="Roger"></td>
+              </tr>
+              <tr>
+                <td><input type="text" class="shift-date" value="10/mai"></td>
+                <td><input type="time" class="shift-time" value="04:00:00"></td>
+                <td><input type="text" class="shift-employee" value="Vinicius"></td>
+              </tr>
+              <tr>
+                <td><input type="text" class="shift-date" value="17/mai"></td>
+                <td><input type="time" class="shift-time" value="04:00:00"></td>
+                <td><input type="text" class="shift-employee" value="Luis Henrique"></td>
+              </tr>
+              <tr>
+                <td><input type="text" class="shift-date" value="24/mai"></td>
+                <td><input type="time" class="shift-time" value="04:00:00"></td>
+                <td><input type="text" class="shift-employee" value="Roger"></td>
+              </tr>
+              <tr>
+                <td><input type="text" class="shift-date" value="31/mai"></td>
+                <td><input type="time" class="shift-time" value="04:00:00"></td>
+                <td><input type="text" class="shift-employee" value="Vinicius"></td>
+              </tr>
+            </tbody>
+          </table>
+          <button id="save-shifts-button" class="action-button">Salvar Alterações nos Turnos</button>
         </section>
 
         <section class="dashboard-widget widget-employee-summary">
-          <h2><i class="fas fa-chart-bar"></i> Resumo de Horas por Colaborador (<span id="employee-summary-period">Mês
-              Atual</span>)</h2>
-          <div class="summary-container">
-            <div class="summary-table-container">
-              <table id="employee-summary-table">
-                <thead>
-                  <tr>
-                    <th>Colaborador</th>
-                    <th>Total de Horas</th>
-                  </tr>
-                </thead>
-                <tbody></tbody>
-              </table>
-            </div>
-            <div class="summary-chart-container">
-              <canvas id="employee-hours-chart"></canvas>
-            </div>
-          </div>
+          <h2>Resumo de Horas por Colaborador</h2>
+          <table id="employee-summary-table">
+            <thead>
+              <tr>
+                <th>Colaborador</th>
+                <th>Total de Horas</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
         </section>
       </main>
     </div>
